--- a/scss/bootstrap-custom.scss
+++ b/scss/bootstrap-custom.scss
@@ -8,6 +8,7 @@ $body-bg-dark: #0B0A0C;
 
 //navbar
 $nav-link-font-weight: 600;
+$nav-link-font-size: 0.875em;
 
 // grid stuff
 
